Fix for image cropper rounded corners

--- a/src/sass/form/_image.scss
+++ b/src/sass/form/_image.scss
@@ -35,6 +35,9 @@
 	// Remove the margin that we want when no crops are present
 	.img-thumbnail {
 		margin: 0;
+
+		// Remove the rounded corner in the uppwer left
+		@include border-corner-radius(top, left, 0);
 	}
 	
 	// Setup the tabs
